# nspire-utils

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/nspire-utils/devices/: LCD.hpp  PL031Deriv_RTC.hpp  PL190.hpp  SHA256.hpp  SP804.hpp  TripleDES.hpp  Watchdog.hpp
include/nspire-utils/devices/usb/: FOTG210.hpp  FOTG210_Structures.hpp
include/nspire-utils/hook/: Hooks.hpp
include/nspire-utils/mem/: AlignedAlloc.hpp  Alloc.hpp  SRAM.hpp
include/nspire-utils/platform/: CPU.hpp  Caches.hpp  EVT.hpp  MMUEditor.hpp
reference/: FOTG210_Structures.hpp  fotg210-core.c  fotg210-hdc.c  fotg210-hdc.h  fotg210-udc.c  fotg210-udc.h  fotg210.h
src/devices/pl190/: Editor.cpp  State.cpp
src/devices/usb/: init.cpp  op_accessors.cpp  reset.cpp  structures.cpp
src/hook/: HookTemplates.S  Hooks.cpp
src/mem/: AlignedAlloc.cpp  Alloc.cpp  SRAMAccessor.cpp
src/platform/: Caches.cpp  MMUEditor.cpp  evt.cpp
tests/interrupted/: Makefile  handleIRQ.S  main.cpp
tests/usb/: will do later
